fixes spacing between tabs on media800

--- a/frontend/client/src/App.css
+++ b/frontend/client/src/App.css
@@ -366,6 +366,7 @@
   }
   #thirdRow {
     padding-left: 143px;
+    padding-top: 30px;
   }
 }
 
